manifests/gliderbot.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: gliderbot
  labels:
    app: gliderbot
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: gliderbot
  template:
    metadata:
      labels:
        app: gliderbot
    spec:
      containers:
      - name: gliderbot
        image: gliderbot
