manifests/access-controller-controller.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: access-controller-controller
  labels:
    app: access-controller-controller
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: access-controller-controller
  template:
    metadata:
      labels:
        app: access-controller-controller
    spec:
      containers:
      - name: controller
        image: ghcr.io/thelab-ms/access-controller-controller:main-b26e1cb
        volumeMounts:
          - name: keycloak-creds
            mountPath: /var/lib/keycloak
          - name: root-ca
            mountPath: /etc/ssl/certs
      volumes:
        - name: keycloak-creds
          csi:
            driver: identity.keycloak.org
            volumeAttributes:
              clientID: access-controller
        - name: root-ca
          hostPath:
            path: /etc/ssl/certs/
            type: Directory

---

apiVersion: v1
kind: Service
metadata:
  name: access-controller-controller
spec:
  type: ClusterIP
  selector:
      app: access-controller-controller
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080
