manifests/frigate.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate
  labels:
    app: frigate
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frigate
  template:
    metadata:
      labels:
        app: frigate
    spec:
      nodeName: supermicro2
      runtimeClassName: nvidia

      containers:
      - name: frigate
        image: ghcr.io/blakeblackshear/frigate:0.12.1
        volumeMounts:
          - name: cache
            mountPath: /tmp/cache
          - name: devshm
            mountPath: /dev/shm
          - name: media
            mountPath: /media/frigate
          - name: config
            mountPath: /config/config.yml
            subPath: frigate.yml
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /api/
            port: 5000
        resources:
          limits:
            nvidia.com/gpu: "1"

      - name: oauth2proxy
        image: quay.io/oauth2-proxy/oauth2-proxy:v7.4.0
        securityContext:
          privileged: true
        volumeMounts:
          - name: proxy-keycloak-creds
            mountPath: /var/lib/keycloak
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /ping
            port: 8888

      volumes:
        - name: proxy-keycloak-creds
          csi:
            driver: identity.keycloak.org
            volumeAttributes:
              clientID: oauthproxy
        - name: cache
          emptyDir:
            medium: Memory
            sizeLimit: 1G
        - name: devshm
          emptyDir:
            medium: Memory
            sizeLimit: 1G
        - name: media
          hostPath:
            path: /opt/frigate
        - name: config
          configMap:
            name: frigate-config

---

apiVersion: v1
kind: Service
metadata:
  name: frigate
spec:
  type: ClusterIP
  selector:
      app: frigate
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8888

---

apiVersion: v1
kind: Service
metadata:
  name: frigate-unauthenticated
spec:
  type: ClusterIP
  selector:
      app: frigate
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 5000

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: frigate-exporter
  labels:
    app: frigate-exporter
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: frigate-exporter
  template:
    metadata:
      labels:
        app: frigate-exporter
    spec:
      containers:
      - name: frigate-exporter
        image: ghcr.io/thelab-ms/frigate-exporter:main-8bf970e
