manifests/keycloak.yaml
# Bootstrapping Keycloak requires a few manual steps - it's not worth automating them.
# - Generate the root account's password: kubectl create secret generic keycloak-admin --from-literal=KEYCLOAK_ADMIN_PASSWORD=$(openssl rand -base64 16)
# - Create a client called "k8s-csi-driver" to be used by the CSI driver, which issues client secrets to pods: kubectl create secret generic keycloak-csi-driver-creds --from-literal=password=$CLIENT_SECRET

apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: ghcr.io/thelab-ms/keycloak-extensions:main-ce5b2d5
        args:
        - start
        - --optimized
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /health/ready
            port: 8080

---

apiVersion: v1
kind: Service
metadata:
  name: keycloak
spec:
  type: ClusterIP
  selector:
      app: keycloak
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: apps/v1
kind: DaemonSet
metadata:
  name: keycloak-csi-driver
spec:
  selector:
    matchLabels:
      name: keycloak-csi-driver
  template:
    metadata:
      labels:
        name: keycloak-csi-driver
    spec:
      terminationGracePeriodSeconds: 30

      volumes:
        - name: registration-dir
          hostPath:
            path: /var/lib/kubelet/plugins_registry/
            type: Directory
        - name: plugin-dir
          hostPath:
            path: /var/lib/kubelet/plugins/identity.keycloak.org/
            type: DirectoryOrCreate
        - name: root-ca
          hostPath:
            path: /etc/ssl/certs/
            type: Directory
        - name: keycloak-password
          secret:
            secretName: keycloak-csi-driver-creds
        - name: mountpoint-dir
          hostPath:
            path: /var/lib/kubelet/pods
            type: Directory

      containers:
      - name: csi-driver-registrar
        image: k8s.gcr.io/sig-storage/csi-node-driver-registrar:v2.9.3
        args:
          - "--csi-address=/csi/csi.sock"
          - "--kubelet-registration-path=/var/lib/kubelet/plugins/identity.keycloak.org/csi.sock"
          - "--health-port=9809"
        volumeMounts:
          - name: plugin-dir
            mountPath: /csi
          - name: registration-dir
            mountPath: /registration

      - name: csi-driver
        image: "ghcr.io/jveski/keycloak-k8s-shim:main-4788b4d"
        securityContext:
          privileged: true
        args:
          - --keycloak-url=https://keycloak.apps.thelab.ms
        volumeMounts:
          - name: plugin-dir
            mountPath: /csi
          - name: root-ca
            mountPath: /etc/ssl/certs
          - name: keycloak-password
            readOnly: true
            mountPath: "/etc/keycloak"
          - name: mountpoint-dir
            mountPath: /var/lib/kubelet/pods
            mountPropagation: "Bidirectional"
