manifests/psql-keycloak.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: psql-keycloak
  labels:
    app: psql-keycloak
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: psql-keycloak
  template:
    metadata:
      labels:
        app: psql-keycloak
    spec:
      nodeName: supermicro1
      containers:
      - name: psql
        image: postgres
        volumeMounts:
          - name: data
            mountPath: /var/lib/postgresql/data

      volumes:
        - name: data
          hostPath:
            path: /opt/keycloak-psql

---

apiVersion: v1
kind: Service
metadata:
  name: psql-keycloak
spec:
  clusterIP: None
  selector:
      app: psql-keycloak
  ports:
    - name: psql
      protocol: TCP
      port: 5432
      targetPort: 5432
