manifests/wikijs.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wikijs
  labels:
    app: wikijs
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wikijs
  template:
    metadata:
      labels:
        app: wikijs
    spec:
      containers:
      - name: wikijs
        image: wikijs
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /healthz
            port: 3000

---

apiVersion: v1
kind: Service
metadata:
  name: wikijs
spec:
  type: ClusterIP
  selector:
      app: wikijs
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 3000
