manifests/fobsvr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: fobsvr
  labels:
    app: fobsvr
spec:
  replicas: 1
  selector:
    matchLabels:
      app: fobsvr
  template:
    metadata:
      labels:
        app: fobsvr
    spec:
      containers:
      - name: svc
        image: fobsvr
        args:
          - --callback-url=http://fobsvr.default.svc.cluster.local
          - --keycloak-url=https://keycloak.apps.thelab.ms
          - --keycloak-group-id=4eea9c17-f9b1-41eb-8f25-721ae04b66f6
        volumeMounts:
          - name: keycloak-creds
            mountPath: /var/lib/keycloak
          - name: root-ca
            mountPath: /etc/ssl/certs
        readinessProbe:
          initialDelaySeconds: 2
          periodSeconds: 5
          httpGet:
            path: /healthz
            port: 8080

      volumes:
        - name: keycloak-creds
          csi:
            driver: identity.keycloak.org
            volumeAttributes:
              clientID: access-controller
        - name: root-ca
          hostPath:
            path: /etc/ssl/certs/
            type: Directory

---

apiVersion: v1
kind: Service
metadata:
  name: fobsvr
spec:
  type: ClusterIP
  selector:
      app: fobsvr
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8080

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: fobsvr
spec:
  virtualhost:
    fqdn: fobs.apps.thelab.ms
    rateLimitPolicy:
      local:
        requests: 50
        unit: second
        burst: 50
    tls:
      secretName: fobsvr-cert
      clientValidation:
        caSecret: internal-ca
  routes:
    - conditions:
      - prefix: /
      services:
        - name: fobsvr
          port: 80
