manifests/profile-staging.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: profile-staging
  labels:
    app: profile-staging
  annotations:
    oauth-sidecar: "yes"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: profile-staging
  template:
    metadata:
      labels:
        app: profile-staging
      annotations:
        prometheus.io/port: "8081"
        prometheus.io/path: /metrics
        prometheus.io/scrape: "true"
    spec:
      containers:
        - name: svc
          # Image is set in the profile app's deploy github action
          volumeMounts:
            - name: keycloak-creds
              mountPath: /var/lib/keycloak
            - name: root-ca
              mountPath: /etc/ssl/certs
          readinessProbe:
            initialDelaySeconds: 2
            periodSeconds: 5
            httpGet:
              path: /health
              port: 8080

        - name: oauth2proxy
      volumes:
        - name: keycloak-creds
          csi:
            driver: identity.keycloak.org
            volumeAttributes:
              clientID: profile-app

        - name: root-ca
          hostPath:
            path: /etc/ssl/certs/
            type: Directory

---
apiVersion: v1
kind: Service
metadata:
  name: profile-staging
spec:
  type: ClusterIP
  selector:
    app: profile-staging
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 8880

---
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: profile-staging
spec:
  virtualhost:
    fqdn: profile-staging.thelab.ms
    rateLimitPolicy:
      local:
        requests: 50
        unit: second
        burst: 50
    tls:
      secretName: wildcard-cert
  routes:
    - conditions:
        - prefix: /
      services:
        - name: profile
          port: 80
