manifests/redirects.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: waiver
spec:
  virtualhost:
    fqdn: waiver.thelab.ms
    tls:
      secretName: wildcard-cert
  routes:
    - conditions:
      - prefix: /
      requestRedirectPolicy:
        hostname: docuseal.apps.thelab.ms
        path: /d/rzCA7aZaUrBfLH

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: discord
spec:
  virtualhost:
    fqdn: discord.thelab.ms
    tls:
      secretName: wildcard-cert
  routes:
    - conditions:
      - prefix: /
      requestRedirectPolicy:
        hostname: discord.gg
        path: /6zqaP8e5q4

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: join
spec:
  virtualhost:
    fqdn: join.thelab.ms
    tls:
      secretName: wildcard-cert
  routes:
    - conditions:
      - prefix: /
      requestRedirectPolicy:
        hostname: wiki.apps.thelab.ms
        path: /en/join

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: kb
spec:
  virtualhost:
    fqdn: kb.thelab.ms
    tls:
      secretName: wildcard-cert
  routes:
    - conditions:
      - prefix: /
      requestRedirectPolicy:
        hostname: wiki.apps.thelab.ms
        path: /en/kb-migration

---

apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: wiki
spec:
  virtualhost:
    fqdn: wiki.thelab.ms
    tls:
      secretName: wildcard-cert
  routes:
    - conditions:
      - prefix: /
      requestRedirectPolicy:
        hostname: wiki.apps.thelab.ms
